# Maths_4RVJV_2024-2025_S2

./: CMakeLists.txt  README.md  main.cpp
include/: BezierApp.h  BezierCurve.h  CyriusBeck.h  ImGuiManager.h  Point.h  Shader.h  SutherlandHodgman.h
include/bezier/: BezierCurve.h
include/clipping/: CyriusBeck.h  SutherlandHodgman.h
include/commons/: GLShader.h
shader/: basic.fs.glsl  basic.vs.glsl  surface3d.fs.glsl  surface3d.vs.glsl
src/: BezierApp.cpp  BezierCurve.cpp  CyriusBeck.cpp  GLShader.cpp  ImGuiManager.cpp  Point.cpp  Shader.cpp  SutherlandHodgman.cpp
src/bezier/: BezierCurve.cpp
src/clipping/: CyriusBeck.cpp  SutherlandHodgman.cpp
src/commons/: GLShader.cpp  Point.cpp
src/ui/: ImGuiManager.cpp
